syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "GetByKey.proto";
import "GetBySolidityID.proto";

import "ContractCallLocal.proto";
import "ContractGetInfo.proto";
import "ContractGetBytecode.proto";
import "ContractGetRecords.proto";

import "CryptoGetAccountBalance.proto";
import "CryptoGetAccountRecords.proto";
import "CryptoGetInfo.proto";
import "CryptoGetClaim.proto";
import "CryptoGetStakers.proto";

import "FileGetContents.proto";
import "FileGetInfo.proto";

import "TransactionGetReceipt.proto";
import "TransactionGetRecord.proto";
import "TransactionGetFastRecord.proto";

/* A single query, which is sent from the client to the node. This includes all possible queries. Each Query should not have more than 50 levels. */
message Query {
    oneof query {
        GetByKeyQuery getByKey = 1; // Get all entities associated with a given key
        GetBySolidityIDQuery getBySolidityID = 2; // Get the IDs in the format used in transactions, given the format used in Solidity
        ContractCallLocalQuery contractCallLocal = 3; // Call a function of a smart contract instance
        ContractGetInfoQuery contractGetInfo = 4; // Get information about a smart contract instance
        ContractGetBytecodeQuery contractGetBytecode = 5; // Get bytecode used by a smart contract instance
        ContractGetRecordsQuery ContractGetRecords = 6; // Get Records of the contract instance

        CryptoGetAccountBalanceQuery cryptogetAccountBalance = 7; // Get the current balance in a cryptocurrency account
        CryptoGetAccountRecordsQuery cryptoGetAccountRecords = 8; // Get all the records that currently exist for transactions involving an account
        CryptoGetInfoQuery cryptoGetInfo = 9; // Get all information about an account
        CryptoGetClaimQuery cryptoGetClaim = 10; // Get a single claim from a single account (or null if it doesn't exist)
        CryptoGetStakersQuery cryptoGetProxyStakers = 11; // Get all the accounts that proxy stake to a given account, and how much they proxy stake (not yet implemented in the current API)

        FileGetContentsQuery fileGetContents = 12; // Get the contents of a file (the bytes stored in it)
        FileGetInfoQuery fileGetInfo = 13; // Get information about a file, such as its expiration date

        TransactionGetReceiptQuery transactionGetReceipt = 14; // Get a receipt for a transaction (lasts 180 seconds)
        TransactionGetRecordQuery transactionGetRecord = 15; // Get a record for a transaction (lasts 1 hour)
        TransactionGetFastRecordQuery transactionGetFastRecord = 16; // Get a record for a transaction (lasts 180 seconds)
    }
}
